メニューのリンク

--- a/app/views/beginners/show.html.erb
+++ b/app/views/beginners/show.html.erb
@@ -1,7 +1,7 @@
 <div id="pan-navi" class="clearfix">
 <ol>
-<li class="arrow"><a href="./index.html">HOME</a></li>
-<li class="arrow"><a href="./beginner-list.html">株初心者</a></li>
+<li class="arrow"><%= link_to "HOME", root_path %></li>
+<li class="arrow"><%= link_to "株用語集", glossaries_path %></li>
 <li><strong>株とは</strong></li>
 </ol>
 </div>
