--- a/app/views/page/menseki.html.erb
+++ b/app/views/page/menseki.html.erb
@@ -1,7 +1,7 @@
 
 <div id="pan-navi" class="clearfix">
 	<ol>
-		<li class="arrow"><a href="./index.html">HOME</a></li>
+		<li class="arrow"><%= link_to "HOME", root_path %></li>
 		<li><strong>免責事項</strong></li>
 	</ol>
 </div>
