--- a/app/views/pieces/index.html.erb
+++ b/app/views/pieces/index.html.erb
@@ -5,7 +5,7 @@
 <!--line-->
 <div id="pan-navi" class="clearfix">
   <ol>
-    <li class="arrow"><a href="./index.html">HOME</a></li>
+    <li class="arrow"><%= link_to "HOME", root_path %></li>
     <li><strong>仕手株速報</strong></li>
   </ol>
 </div>
