--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,6 +1,6 @@
 <div id="pan-navi" class="clearfix">
 <ol>
-<li class="arrow"><a href="./index.html">HOME</a></li>
+<li class="arrow"><%= link_to "HOME", root_path %></li>
 <li><strong>銘柄一覧</strong></li>
 </ol>
 </div>
