--- a/app/views/stocks/show.html.erb
+++ b/app/views/stocks/show.html.erb
@@ -1,7 +1,7 @@
 <div id="pan-navi" class="clearfix">
 	<ol>
-		<li class="arrow"><a href="./index.html">HOME</a></li>
-		<li class="arrow"><a href="./brand-list.html">銘柄一覧</a></li>
+		<li class="arrow"><%= link_to "HOME", root_path %></li>
+		<li class="arrow"><%= link_to "銘柄一覧", stocks_path %></li>
 		<li><strong>8515 ガンホーオンラインエンターテイメント</strong></li>
 	</ol>
 </div>
