--- a/app/views/toushikomons/show.html.erb
+++ b/app/views/toushikomons/show.html.erb
@@ -1,6 +1,6 @@
 <div id="pan-navi" class="clearfix">
 <ol>
-<li class="arrow"><a href="./index.html">HOME</a></li>
+<li class="arrow"><%= link_to "HOME", root_path %></li>
 <li class="arrow"><a href="./toushikomon-list.html">投資顧問一覧</a></li>
 <li><strong>アイリンクインベストメント</strong></li>
 </ol>
