--- a/app/views/page/kiyaku.html.erb
+++ b/app/views/page/kiyaku.html.erb
@@ -1,6 +1,6 @@
 <div id="pan-navi" class="clearfix">
 	<ol>
-		<li class="arrow"><a href="./index.html">HOME</a></li>
+		<li class="arrow"><%= link_to "HOME", root_path %></li>
 		<li><strong>利用規約</strong></li>
 	</ol>
 </div>
