--- a/app/views/pieces/show.html.erb
+++ b/app/views/pieces/show.html.erb
@@ -1,7 +1,7 @@
 <div id="pan-navi" class="clearfix">
 	<ol>
-		<li class="arrow"><a href="./index.html">HOME</a></li>
-		<li class="arrow"><a href="./sitekabu-list.html">仕手株速報</a></li>
+		<li class="arrow"><%= link_to "HOME", root_path %></li>
+		<li class="arrow"><%= link_to "仕手株速報", pieces_path %></li>
 		<li><strong>ガンホーオンラインエンターテイメントが仕手筋に狙われる</strong></li>
 	</ol>
 </div>
