--- a/app/views/glossaries/index.html.erb
+++ b/app/views/glossaries/index.html.erb
@@ -32,181 +32,14 @@
 				<li><a href="#glossary-10">わ行</a></li>
 				<li><a href="#glossary-11">英数</a></li>
 			</ul>
-
-			<section  id="glossary-1" class="glossary-list clearfix">
-				<h2>あ行の株用語</h2>
-				<ul>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-				</ul>
-			</section>
-
-			<section  id="glossary-2" class="glossary-list clearfix">
-				<h2>か行の株用語</h2>
-				<ul>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-				</ul>
-			</section>
-
-			<section  id="glossary-3" class="glossary-list clearfix">
-				<h2>さ行の株用語</h2>
-				<ul>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-				</ul>
-			</section>
-
-			<section  id="glossary-4" class="glossary-list clearfix">
-				<h2>た行の株用語</h2>
-				<ul>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-				</ul>
-			</section>
-
-			<section  id="glossary-5" class="glossary-list clearfix">
-				<h2>な行の株用語</h2>
-				<ul>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-				</ul>
-			</section>
-
-			<section  id="glossary-6" class="glossary-list clearfix">
-				<h2>は行の株用語</h2>
-				<ul>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-				</ul>
-			</section>
-
-			<section  id="glossary-7" class="glossary-list clearfix">
-				<h2>ま行の株用語</h2>
-				<ul>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-				</ul>
-			</section>
-
-			<section  id="glossary-8" class="glossary-list clearfix">
-				<h2>や行の株用語</h2>
-				<ul>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-				</ul>
-			</section>
-
-			<section  id="glossary-9" class="glossary-list clearfix">
-				<h2>ら行の株用語</h2>
-				<ul>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-				</ul>
-			</section>
-
-			<section  id="glossary-10" class="glossary-list clearfix">
-				<h2>わ行の株用語</h2>
-				<ul>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-				</ul>
-			</section>
-
-			<section  id="glossary-11" class="glossary-list clearfix">
-				<h2>英数の株用語</h2>
-				<ul>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-					<li><a href="./glossary.html">アービトラージ</a></li>
-				</ul>
-			</section>
-
+      <% 11.times do |i| %>
+          <section  id="glossary-<%= i %>" class="toushikomon-list clearfix">
+              <h2><%= ["あ","か","さ","た","な","は","ま","や","ら","わ", "英数"][i] %>行の株用語</h2>
+              <ul>
+                  <% Glossary.where(category: i).each do |consultant| %>
+                    <li><%= link_to consultant.title, glossary_path(consultant) %></li>
+                  <% end %>
+              </ul>
+          </section>
+      <% end %> 
 		</article>
