--- a/app/views/toushikomon_boards/index.html.erb
+++ b/app/views/toushikomon_boards/index.html.erb
@@ -23,7 +23,7 @@
 			<ul class="toushikomon-review-list-box">
 
 				
-				<% Comment.where("consultant_id IS NOT ?", nil).each do |comment| %>
+				<% @comments.each do |comment| %>
 					<li class="toushikomon-review-list clearfix">
 						<dl class="clearfix">
 							<dt><%= link_to comment.consultant.title, consultant_path(comment.consultant) %>の口コミ</dt>
@@ -35,18 +35,6 @@
 				<% end %>
 			</ul>
 
-			<ul class="pn-navi clearfix">
-				<li><a href="./toushikomon-review.html">&lt;&lt;前へ</a></li>
-				<li class="current"><span>1</span></li>
-				<li class="number"><a href="./toushikomon-review.html">2</a></li>
-				<li class="number"><a href="./toushikomon-review.html">3</a></li>
-				<li class="number"><a href="./toushikomon-review.html">4</a></li>
-				<li class="number"><a href="./toushikomon-review.html">5</a></li>
-				<li class="number"><a href="./toushikomon-review.html">6</a></li>
-				<li class="number"><a href="./toushikomon-review.html">7</a></li>
-				<li class="number"><a href="./toushikomon-review.html">8</a></li>
-				<li class="number"><a href="./toushikomon-review.html">9</a></li>
-				<li><a href="./toushikomon-review.html">次へ&gt;&gt;</a></li>
-			</ul>
+			<%= will_paginate(@comments, :prev_label=>'&#171;前', :next_label=>'次&#187;') %>
 
 		</article>
