--- a/app/views/consultants/new.html.erb
+++ b/app/views/consultants/new.html.erb
@@ -1,5 +1,22 @@
+<div id="pan-navi" class="clearfix">
+  <ol>
+    <li class="arrow"><a href="./index.html">HOME</a></li>
+    <li><strong>投資顧問一覧</strong></li>
+  </ol>
+</div>
+<!--//pan-navi-->
+
+<!--content-->
+<div id="content" class="clearfix">
+
+  <!--content-box-->
+  <div id="content-box" class="clearfix">
+
+<!--main-->
+<article id="main" class="clearfix">
 <h1>New consultant</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', consultants_path %>
+</article>
