--- a/app/views/glossaries/_form.html.erb
+++ b/app/views/glossaries/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :category %><br />
-    <%= f.select :category, {"株の基本的な仕組みを知る" => 1, "証券会社で口座を開設する" => 2, "株式取引を初めてみよう" => 3, "チャートの見方を覚えよう" => 4, "株式投資で知っておきたい情報" => 5} %>
+    <%= f.select :category, {"あ" => 0, "か" => 1, "さ" => 2, "た" => 3, "な" => 4, "は" => 5, "ま" => 6, "や" => 7, "ら" => 8, "わ" => 9, "英数字" => 10} %>
   </div>
   <div class="field">
     <%= f.label :contents %><br />
